trying to solve issue with text not clear on smaller screens, added <strong>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ body {
     color: black;
     position: relative;
     line-height: 25px;
-    text-shadow: black;
     text-align: left;
+    text-transform: bold;
 }
 
 /*----------------------------------------Background Image/Images---*/
